feat：编写页面，引入bootstrap文件

--- a/public/css/comm.css
+++ b/public/css/comm.css
@@ -1,3 +1,128 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-  background-color: yellow;
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* reset css end */
+
+.header-nav {
+  height: 60px;
+  width: 100%;
+  background-color: #24292e;
+}
+
+label.logo {
+  float: left;
+  line-height: 60px;
+  font-size: 16px;
+  color: white;
+  font-weight: bold;
+  padding: 0 100px;
+}
+
+.btn-menu {
+  font-size: 14px;
+  color: white;
+  line-height: 60px;
+  cursor: pointer;
+  display: none;
+  float: right;
+  margin-right: 20px;
+}
+
+label a {
+  color: white;
+  text-decoration:none;
+}
+
+label a:hover {
+  color: white;
+  text-decoration:none;
+}
+
+.header-nav ul {
+  float: right;
+  margin-right: 20px;
+}
+
+.header-nav ul li {
+  display: inline-block;
+  list-style: none;
+  line-height: 60px;
+  color: white;
+  margin: 0 10px;
+  font-size: 12px;
+  text-decoration:none;
+}
+
+.header-nav ul li a:visited {
+  color: white;
+  text-decoration:none;
+}
+
+.header-nav ul li a:hover {
+  color: #ccc;
+  text-decoration:none;
+}
+
+@media screen and (max-width: 952px) {
+  label.logo {
+    padding-left: 50px;
+  }
+}
+
+@media screen and (max-width: 858px) {
+  label.logo {
+    padding-left: 20px;
+  }
+  .btn-menu {
+    display: block;
+  }
+  .header-nav ul {
+    display: none;
+  }
 }
