feat：待定两列布局

--- a/public/css/comm.css
+++ b/public/css/comm.css
@@ -49,6 +49,19 @@ table {
 
 /* reset css end */
 
+ /* 解决高度塌陷 */
+ .clearfix {
+  *zoom: 1;
+}
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+/*  */
+
 .header-nav {
   height: 60px;
   width: 100%;
