--- a/public/css/home.css
+++ b/public/css/home.css
@@ -61,8 +61,9 @@
     display: flex;
     display: -webkit-flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-
+    justify-content: space-around;
+    align-items: space-around;
+    align-content: flex-start;
     /* header hight & footer height & margin */
     min-height: calc(100vh - 60px - 180px);
 }
